styles.css
*,*::before,*::after {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: Arial, Helvetica, sans-serif;
}

html {
    scroll-behavior: smooth;
    scroll-padding: 3.5em;
}

body {
    overflow-x: hidden;
}

:root {
    --primary-color: #3f3f3f;
    --text-color: white;
}

nav {
    height: 8vh;
    width: 100%;
    padding: 0 1em;
    display: flex;
    justify-content: space-between;
    align-items: center;
    background-color: var(--primary-color);
    color: var(--text-color);
    font-size: 1.2rem;

    position: fixed;
    z-index: 99;
}

.logo a {
    letter-spacing: 2px;
    text-transform: uppercase;
    font-family: 'Times New Roman', Times, serif;
    color: unset;
    text-decoration: none;
}

.nav-links {
    height: 92vh;
    width: 100%;
    position: absolute;
    top: 8vh;
    right: -100%;
    background-color: var(--primary-color);

    display: flex;
    flex-direction: column;
    justify-content: space-evenly;
    align-items: center;

    transition: all 0.5s;
}

.nav-active {
    right: 0%;
}

.nav-links li {
    list-style-type: none;
}

.nav-links a {
    text-decoration: none;
    color: unset;
}

.burger {
    cursor: pointer;
}

.burger div {
    height: 2.2px;
    width: 26px;
    margin: 5px;
    background-color: var(--text-color);
}

section {
    padding: 0 1em;
}

.hero-section {
    height: 100vh;
    background-image: url(./assets/images/hero-bg.jpg);
    background-position: center;
    background-size: cover;
}

.hero-section blockquote {
    display: none;
}

.history-section {
    padding-top: 3em;
    padding-bottom: 5em;
}

.history-section iframe {
    display: block;
    margin: 1em auto;
    
}

.evolution-section h3 {
    padding-top: 0.5em;
    padding-bottom: 0.2em;
}

.evolution-section .evo-img {
    display: block;
    max-width: 100%;
}

.evolution-section img {
    display: block;
    max-width: 20%;
    margin: 1em auto;
}

.evolution-section .float-img {
    float: right;
}

.future-section {
    padding-top: 1em;
}

.future-section h3{
    padding-top: 0.5em;
    padding-bottom: 0.2em;
}

.future-section img {
    display: block;
    max-width: 60%;
    margin: 1em auto;
}

.footer-section {
    height: 20vh;
    width: 100%;
    background-color: var(--primary-color);
}

.footer-section h1 {
    letter-spacing: 2px;
    text-transform: uppercase;
    font-family: 'Times New Roman', Times, serif;
    color: white;
    padding-top: 2em;
}

@media only screen and (min-width: 992px) {
    nav {
        justify-content: space-around;
    }
    .burger {
        display: none;
    }

    .nav-links {
        height: unset;
        width: 35%;
        position: unset;

        flex-direction: row;
        justify-content: space-between;
        transition: none;
    }

    .hero-section {
        background-image: url(./assets/images/hero-bg-landscape.jpg);
        position: relative;
    }

    section {
        padding: 0 15%;
    }

    .hero-section blockquote {
        font-size: 1.5rem;
        width: 35ch;
        display: block;
        position: absolute;
        top: 40%;
        left: 5%;
    }

    .hero-section cite {
        display: block;
        text-align: center;
    }
}

